# jizhangone

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/bowe/localledger/: LocalLedgerApp.kt  MainActivity.kt
app/src/main/java/com/bowe/localledger/data/: BackupModels.kt  LedgerRepository.kt  ReportPeriods.kt
app/src/main/java/com/bowe/localledger/data/local/: AppDatabase.kt  (+1 more)
app/src/main/java/com/bowe/localledger/sync/: SyncScheduler.kt  SyncWorker.kt
app/src/main/java/com/bowe/localledger/ui/: AppViewModel.kt  LocalLedgerAppRoot.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
backend/: .env.example  .env.production.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  errors.py  router.py
backend/app/api/routes/: auth.py  bootstrap.py  health.py  nlp.py  sync.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: entities.py
backend/app/schemas/: auth.py  bootstrap.py  common.py  nlp.py  sync.py
backend/app/services/: auth_service.py  nlp_service.py  sync_service.py
deploy/tencent-cloud/: OPENCLAW_DEPLOY_PROMPT.md  bootstrap_ubuntu.sh  deploy_backend.sh  install_tailscale.sh  prepare_prod_env.sh  publish_tailscale_https.sh  verify_backend.sh
docs/: NETWORK_PLAN.md  PRD.md  README.md  TASKS.md  TENCENT_CLOUD_DEPLOY.md  UX_REFINEMENT_PLAN.md
(+28 files in other folders)
